<resources>
    <string name="app_name">Room Database App</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="age">age</string>
    <string name="designation">Designation</string>
    <string name="name">Name</string>
    <string name="colon">:</string>
    <string name="enter_your_designation">Enter your designation</string>
    <string name="user_added">User added</string>
    <string name="user_deleted">User deleted</string>
    <string name="update">Update</string>
    <string name="user_data_updated">User data updated</string>
</resources>