<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#EFEFEF"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <EditText
        android:id="@+id/edt_name"
        android:layout_marginBottom="@dimen/_8sdp"
        android:textColor="@color/black"
        android:hint="@string/enter_your_name"
        android:textSize="@dimen/_12ssp"
        android:padding="@dimen/_8sdp"
        android:background="#ffffff"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_designation"
        android:layout_marginBottom="@dimen/_8sdp"
        android:textColor="@color/black"
        android:hint="@string/enter_your_designation"
        android:textSize="@dimen/_12ssp"
        android:padding="@dimen/_8sdp"
        android:inputType="text"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_age"
        android:layout_marginBottom="@dimen/_8sdp"
        android:textColor="@color/black"
        android:hint="@string/enter_your_age"
        android:textSize="@dimen/_12ssp"
        android:padding="@dimen/_8sdp"
        android:inputType="phone"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_submit"
        android:textColor="@color/white"
        android:background="#E91E63"
        android:textSize="@dimen/_12ssp"
        android:text="@string/save"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/room_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>